--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,22 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: darkgrey;
+  background-color:darkgray;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  background-color: black;
+  background-color: #10365d7d !important;
   margin-bottom: 10px;
+  margin-left: -1px;
+  margin-right: -1px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 nav ul li {
+  display: block;
   padding-top: 10px !important;
   padding-bottom: 10px !important;
   padding-left: 25px !important;
@@ -49,9 +54,58 @@ p {
   max-width: 1100px !important;
 }
 
+.row {
+  width: 100%;
+}
+
 .searchFormHold {
-  display: block;
+  display: flex;
   width:100%;
   height: 350px;
-  background-color: black;
+  background-color: #10365d7d;
+  border-radius: 10px;
+}
+
+.form-control {
+  padding: 5px;
+  margin-left: 15px;
+  margin-top: 15px;
+}
+
+.form-group {
+  padding:20px;
+  display: block;
+}
+
+.searchFiltersDiv {
+  display: block;
+  width: 50%;
+}
+
+.titleCl {
+  margin-left: 35px;
+
+}
+
+.container1 {
+  width:100%;
+  padding:15px;
+}
+
+.btn-warning {
+  background-color: #f4793e;
+  border-color: #f4793e;
+  padding: 5px;
+  margin-left: 15px;
+  margin-top: 15px;
+  width: 100%;
+}
+
+.btn-link {
+  padding: 5px;
+  margin-top: 15px;
+  margin-left: 13px;
+  width: 100%;
+  text-align: start;
+  color: white;
 }
