--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ nav ul li a {
   border-bottom: 4px solid white;
 }
 
+ul {
+  list-style-type: none;
+}
+
 h1 {
   margin-bottom: 20px;
 }
@@ -116,7 +120,6 @@ hr {
 }
 
 .titleCl {
-  margin-left: 25px;
   padding: 10px;
 }
 
@@ -284,4 +287,52 @@ hr {
   width:90%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 40px;
+  padding:20px;
+}
+
+.description{
+  width:100%;
+}
+
+.text1 {
+  margin-left:30px;
+}
+
+.carPicturesDiv {
+  width: fit-content;
+}
+
+.picturePrice {
+  width: 100%;
+  max-width: 1070px;
+  display: flex;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.postImageLarge {
+  width: 600px;
+  height: 500px;
+}
+
+.price {
+  width:100%;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.postDiv {
+  width:100%;
+  padding-bottom: 30px;
+}
+
+.postContactInfo {
+  margin-top: 215px;
+  display: flex;
+}
+
+.map {
+  width:400px;
+  height:400px
 }
