--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,9 @@ hr {
 
 .backButton {
   margin-left:15px;
+  cursor: pointer;
+  margin-bottom: 15px;
+  display: block;
 }
 
 .select{
@@ -73,7 +76,6 @@ hr {
 
 .container {
   max-width: 1100px !important;
-  min-width: 770px !important;
 }
 
 .row {
@@ -109,7 +111,7 @@ hr {
 
 .searchFiltersDiv {
   display: block;
-  width: 70%;
+  width: 100%;
   padding-bottom: 0px;
 }
 
@@ -135,8 +137,6 @@ hr {
 .container1 {
   width:100%;
   padding:15px;
-  min-width: 450px !important;
-  max-height: 432px !important;
 }
 
 .btn-warning {
@@ -305,7 +305,7 @@ hr {
 
 .picturePrice {
   width: 100%;
-  max-width: 1070px;
+  /* max-width: 1070px; */
   display: flex;
   margin-left: 20px;
   margin-right: 20px;
